--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "client",
+  "name": "ecommerce-front",
   "version": "0.1.0",
   "private": true,
+  "main": "server.js",
   "dependencies": {
-    "axios": "^0.19.0",
-    "braintree-web": "^3.49.0",
-    "braintree-web-drop-in-react": "^1.0.10",
+    "braintree-web": "^3.45.0",
+    "braintree-web-drop-in-react": "^1.0.7",
     "moment": "^2.24.0",
-    "query-string": "^6.7.0",
+    "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
