--- a/package.json
+++ b/package.json
@@ -4,30 +4,34 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "client": "cd client && yarn start",
-    "server": "nodemon",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client "
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node app.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
-  "author": "Amitabh Kumar",
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "braintree": "^2.16.0",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
-    "express-async-errors": "^3.1.1",
-    "express-jwt": "^5.3.3",
+    "express-jwt": "^5.3.1",
     "express-validator": "^5.3.1",
     "formidable": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "mongoose": "^5.5.5",
-    "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.9.1",
+    "nodemon": "^1.19.0",
     "uuid": "^3.3.2"
   }
 }
