--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.0.1",
     "body-parser": "^1.19.0",
     "braintree": "^2.16.0",
     "cookie-parser": "^1.4.4",
